# trition-serve-trt

./: .gitignore  tmp.txt
.ipynb_checkpoints/: README-checkpoint.md
data/ml/: .env  .env.data  .env.inference  .env.model  Makefile  README.md  _cancel_data.py  _run_data.py  _run_inference.py  _run_model.py  requirements.data.txt  requirements.full.txt  requirements.model.txt
data/ml/configs/: config_parser.py
data/ml/configs/config/: __deprecated_dif_sr_model.gin  __deprecated_sr_data_processor.gin  vae_data_processor.gin  vae_model.gin
data/ml/data_runner/: main.py
data/ml/data_runner/data_processors/: __init__.py  configs.py  data_processor.py  data_processor_test.py  data_processor_v2.py  data_processor_v2_test.py  non_sequential_data_processor.py  non_sequential_data_processor_test.py  non_sequential_data_processor_v2.py  non_sequential_data_processor_v2_test.py  sequential_data_processor.py  sequential_data_processor_test.py  sequential_data_processor_v2.py  sequential_data_processor_v2_test.py  spark_utils.py  spark_utils_test.py  test_utils.py
data/ml/data_runner/utils/: gin_utils.py
data/ml/docker/data/: Dockerfile
data/ml/docker/inference/: Dockerfile
data/ml/docker/model/: Dockerfile
data/ml/env/: model_gin_params.json
data/ml/model_runner/: main.py
data/ml/utils/: enum_utils.py  enum_utils_test.py  file_utils.py  file_utils_test.py  gin_utils.py  gin_utils_test.py  metadata.py  metadata_test.py  runner_flags.py  runner_utils.py  runner_utils_test.py  token_utils.py
data/ml/workspace/: bert4rec_model.py
data/pylib/: BUILD.bazel  aws_utils.py  aws_utils_test.py  command_utils.py  command_utils_test.py  runfiles.py  runfiles_test.py  slack.py  strenum.py  strenum_test.py  watcher.py  watcher_test.py
data/pylib/constant/: recsys.py
data/pylib/hive/: BUILD.bazel  context.py  table_base.py
data/pylib/spark_test/: BUILD.bazel  spark_test_base.py  spark_test_utils.py  spark_test_utils_test.py
data/pylib/testdata/: test.txt
(+163 files in other folders)
